--- a/code/obd/app/ui-home/webapp/view/MainView.view.xml
+++ b/code/obd/app/ui-home/webapp/view/MainView.view.xml
@@ -7,8 +7,10 @@
     <Page id="page" showHeader="false" class="susaasBackground">
         <content>
             <VBox alignContent="Center" justifyContent="Center" alignItems="Center" width="100%" height="100%">
-                <Title level="H1" text="Sustainable SaaS" textAlign="Center" titleStyle="H1" class="sapUiMediumMargin susaasHomeTitle" wrapping="true"/>
-                <Button text="Login or Register" press="onPressLoginRegister"/>
+                <Title level="H1" text="Sustainable SaaS" textAlign="Center" titleStyle="H1" class="sapUiMediumMarginBottom susaasHomeTitle" wrapping="true"/>
+                <Button visible="{= !${viewModel>/sCustomHost} ? true : false }" text="Login or Register" press="onPressLoginRegister"/>
+                <Button visible="{= ${viewModel>/sCustomHost} ? true : false }" text="Access Tenant" press="onPressAccessTenant" class="sapUiSmallMarginBottom"/>
+                <Button visible="{= ${viewModel>/sCustomHost} ? true : false }" text="Manage Tenant" press="onPressManageTenant"/>
             </VBox>
         </content>
     </Page>
